--- a/index.html
+++ b/index.html
@@ -138,6 +138,22 @@
 		</div>
 </main>
 
+<!-- SPONSORS -->
+<div class="container-fluid sponsors--color align-items-center justify-content-center">
+	<div class="container" id="carousel">
+		<div id="carouselIndex" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="d-block" src="assets/imagenes/sponsors1.png" width="100%" height="300px" alt="First slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block" src="assets/imagenes/sponsors2.png" width="100%" height="300px" alt="Second slide">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <!-- QUIENES SOMOS -->
 <div class="container">
 	<div class="row">
@@ -162,20 +178,21 @@
 	</div>
 </div>
 
-<!-- SPONSORS -->
-<div class="container-fluid sponsors--color align-items-center justify-content-center">
-	<div class="container" id="carousel">
-		<div id="carouselIndex" class="carousel slide" data-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img class="d-block" src="assets/imagenes/sponsors1.png" width="100%" height="300px" alt="First slide">
-				</div>
-				<div class="carousel-item">
-					<img class="d-block" src="assets/imagenes/sponsors2.png" width="100%" height="300px" alt="Second slide">
-				</div>
+<!-- concurso -->
+<div class="container-fluid concurso--color">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6 col-md-12 col-xs-12 col-sm-12">
+				<h3 class="subtitulo__index"><a href="pages/contacto.html">Inscribite y participa para ser parte de Nosotros</a></h3>
+				<p><i class="fas fa-check-circle"></i><strong><a href="pages/contacto">Crea tu cuenta</a></strong> en la Seccion de Contacto y participa directamente en nuestro sorteo par ver quien sera nuestro nuevo integrante Viajero, Podrias vivir tu sueño de viajar por el mundo.</p>
+				<p><i class="fas fa-check-circle"></i><strong>Seguinos En Nuestras Redes</strong></p>
+				<p><i class="fas fa-check-circle"></i><strong><a href="pages/contacto">Mandanos un Articulo Escrito por Ti</a></strong> al Mail que se encuentra en la seccion de 'Contacto'</p>
+			</div>
+			<div class="col-lg-6 col-md-12 col-xs-12 col-sm-12">
+				<img src="assets/imagenes/not-tips.jpg" width="100%" height="325" alt="imgSorteo">
 			</div>
 		</div>
-	</div>
+	</div>	
 </div>
 
 <!-- VIVIR EN... -->
@@ -224,8 +241,7 @@
 			<a href="pages/vivir-en.html">Ver Mas</a>
 		</div>
 	</div>
-</div>
-	
+</div>	
 
 <!-- NUESTROS VIAJEROS -->
 <div class="container-fluid">
@@ -236,18 +252,6 @@
 </div>
 </div>
 
-<!-- concurso -->
-<div class="container">
-	<div class="row">
-		<div class="col-lg-6 col-md-12 col-xs-12 col-sm-12">
-			<img src="assets/imagenes/not-tips.jpg" width="100%" height="300" alt="imgSorteo">
-		</div>
-		<div class="col-lg-6 col-md-12 col-xs-12 col-sm-12">
-			<h3 class="subtitulo__index"><a href="pages/contacto.html">Inscribite y participa para ser parte de Nosotros</a></h3>
-			<p><strong>Crea tu cuenta</strong> en la Seccion de Contacto y participa directamente en nuestro sorteo par ver quien sera nuestro nuevo integrante Viajero, Podrias vivir tu sueño de viajar por el mundo.</p>
-		</div>
-	</div>
-</div>	
 
 <!-- Footer -->
 <div class="container-fluid footer--color">
