--- a/pages/viajes.html
+++ b/pages/viajes.html
@@ -91,31 +91,34 @@
 		</div>
 	</div>
 
-	<div class="container rounded viajes--color justify-content-center">
-		<div class="row rounded align-items-center justify-content-evenly center">
-			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow slideInRight">
-				<a href="https://www.airbnb.com.ar/" target="blanck_"><img class="rounded" src="../assets/imagenes/airbnb.png" width="50%" height="100" alt="airbnb"></a>
-				<h4 class="wow slideInRight">Averigua por Hospedajes aqui</h4>		
+	<div class="container-fluid viajes--color">
+		<div class="container rounded justify-content-center">
+			<div class="row rounded align-items-center justify-content-evenly center">
+				<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow slideInRight">
+					<a href="https://www.airbnb.com.ar/" target="blanck_"><img class="rounded" src="../assets/imagenes/airbnb.png" width="50%" height="100" alt="airbnb"></a>
+					<h4 class="wow slideInRight">Averigua por Hospedajes aqui</h4>		
+				</div>
+		
+				<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow slideInRight">
+					<a href="https://www.despegar.com.ar/" target="blanck_"><img class="rounded" src="../assets/imagenes/despegar.png" width="50%" height="100" alt="despegar"></a>	
+					<h4 class="wow slideInRight">Compra tus Pasajes Aqui.</h4>
+				</div>
 			</div>
-	
-			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow slideInRight">
-				<a href="https://www.despegar.com.ar/" target="blanck_"><img class="rounded" src="../assets/imagenes/despegar.png" width="50%" height="100" alt="despegar"></a>	
-				<h4 class="wow slideInRight">Compra tus Pasajes Aqui.</h4>
-			</div>
-		</div>
-	<br>
-		<div class="row rounded align-items-center justify-content-evenly center">
-			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow slideInRight">
-				<a href="https://www.visa.com.ar/viaja-con-visa/viajes.html" target="blanck_"><img class="rounded" src="../assets/imagenes/visa.png" width="50%" height="100" alt="american-express"></a>
-				<h4 class="wow slideInRight">Saca tu Targeta Visa Aqui</h4>		
-			</div>
-	
-			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow slideInRight">
-				<a href="https://www.trivago.com.ar/" target="blanck_"><img class="rounded" src="../assets/imagenes/trivago.png" width="50%" height="100" alt="trivago"></a>	
-				<h4 class="wow slideInRight">Arma tu Paquete Aqui.</h4>
+		<br>
+			<div class="row rounded align-items-center justify-content-evenly center">
+				<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow slideInRight">
+					<a href="https://www.visa.com.ar/viaja-con-visa/viajes.html" target="blanck_"><img class="rounded" src="../assets/imagenes/visa.png" width="50%" height="100" alt="american-express"></a>
+					<h4 class="wow slideInRight">Saca tu Targeta Visa Aqui</h4>		
+				</div>
+		
+				<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow slideInRight">
+					<a href="https://www.trivago.com.ar/" target="blanck_"><img class="rounded" src="../assets/imagenes/trivago.png" width="50%" height="100" alt="trivago"></a>	
+					<h4 class="wow slideInRight">Arma tu Paquete Aqui.</h4>
+				</div>
 			</div>
 		</div>
 	</div>
+
 
 <div class="container">
 		<!-- Lo mas importante -->
