--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
 		<div class="row">
 			<div class="col-lg-6 col-md-12 col-xs-12 col-sm-12">
 				<h3 class="subtitulo__index"><a href="pages/contacto.html">Inscribite y participa para ser parte de Nosotros</a></h3>
-				<p><i class="fas fa-check-circle"></i><strong><a href="pages/contacto">Crea tu cuenta</a></strong> en la Seccion de Contacto y participa directamente en nuestro sorteo par ver quien sera nuestro nuevo integrante Viajero, Podrias vivir tu sueño de viajar por el mundo.</p>
+				<p><i class="fas fa-check-circle"></i><strong><a href="pages/contacto.html">Crea tu cuenta</a></strong> en la Seccion de Contacto y participa directamente en nuestro sorteo par ver quien sera nuestro nuevo integrante Viajero, Podrias vivir tu sueño de viajar por el mundo.</p>
 				<p><i class="fas fa-check-circle"></i><strong>Seguinos En Nuestras Redes</strong></p>
-				<p><i class="fas fa-check-circle"></i><strong><a href="pages/contacto">Mandanos un Articulo Escrito por Ti</a></strong> al Mail que se encuentra en la seccion de 'Contacto'</p>
+				<p><i class="fas fa-check-circle"></i><strong><a href="pages/contacto.html">Mandanos un Articulo Escrito por Ti</a></strong> al Mail que se encuentra en la seccion de 'Contacto'</p>
 			</div>
 			<div class="col-lg-6 col-md-12 col-xs-12 col-sm-12">
 				<img src="assets/imagenes/not-tips.jpg" width="100%" height="325" alt="imgSorteo">
